# JetCar

./: .gitignore  README.md  pyproject.toml  requirements-notebook.txt  requirements.txt
docs/: beginner-quickstart.md  brand-new-jetson-orin-nano-first-boot.md  command-workflow.md  github-wiki-homepage-draft.md  hardware-checklist.md  how-it-works-line-following-and-control.md  jetpack-upgrade.md  jetson-pytorch-install-notes.md  line-following-explained-for-students.md  notebook-chapters-for-students.md  notebook-chapters-guide.md  readme-install-snippets-to-apply.md  start-here-student-guides.md  wave-rover-uart-wiring.md  workshop-plan.md
jetcar/: __init__.py  camera.py  hardware.py  motion.py  training.py  vision.py  yolo.py
notebooks/: 00_environment_check.ipynb  00_package_install_and_check.ipynb  01_motor_calibration_panel.ipynb  01_motor_speed_tuning.ipynb  01_web_panel_intro.ipynb  02_article_contour_follow.ipynb  02_line_following.ipynb  02_yolo_object_detection.ipynb  03_article_contour_follow_with_yolo.ipynb  03_line_following_with_default_yolo_detection.ipynb  04_line_following_with_stop_sign_action.ipynb
scripts/: auto_follow_round.py  check_jetcar_env.py  check_jetpack.sh  install_jetcar.sh  jetcar_contour_sign_panel.py  jetcar_contour_yolo_panel_v2.py  jetcar_motor_calibration_panel.py  manual_like_autotune.py  teleop_server.py  teleop_server_article_contour_panel.py  teleop_server_article_contour_panel_with_yolo.py  teleop_server_keep_mask_contour_drive.py  wave_rover_motor_tuner.py  wave_rover_serial.py  yolo_camera_demo.py
(+12 files in other folders)
